# Spatial-Temporal-LiDAR-camera-Calibration

./: CMakeLists.txt  README.md  iba_calib_plane.cpp  iba_global.cpp
archives/: iba_calib3dq_gpr.cpp  iba_global_m3d.cpp  iba_global_rot.cpp  uiba_local.cpp
config/: settings.sh
config/calib/: ba_calib.yml  he_calib.yml  iba_calib.yml  iba_calib_global.yml  iba_calib_gpr.yml  iba_calib_plane.yml  icp_calib.yml  uiba_calib_gpr.yml
config/calib/00/: ba_calib.yml  he_calib.yml  iba_calib.yml  iba_calib_drawfunc.yml  iba_calib_global.yml  iba_calib_gpr.yml  iba_calib_local.yml  iba_calib_plane.yml  iba_global_refine.yml  icp_calib.yml  uiba_calib_gpr.yml
config/calib/02/: ba_calib.yml  he_calib.yml  iba_calib_global.yml  iba_calib_global_split.yml  iba_calib_gpr.yml  iba_calib_local.yml  iba_calib_plane.yml  icp_calib.yml
config/calib/03/: ba_calib.yml  he_calib.yml  iba_calib_global.yml  iba_calib_global_split.yml
config/calib/04/: ba_calib.yml  he_calib.yml  iba_calib_drawfunc.yml  iba_calib_global.yml
config/calib/05/: ba_calib.yml  he_calib.yml  iba_calib_global.yml  iba_calib_gpr.yml
config/calib/07/: ba_calib.yml  he_calib.yml  iba_calib_global.yml
config/calib/08/: ba_calib.yml  he_calib.yml  iba_calib_global.yml
config/calib/09/: ba_calib.yml  he_calib.yml  iba_calib_global.yml
config/loam/: KITTI.yml  backend.yml
config/orb/: save_localmap.yml  store.yml
config/orb_ori/: KITTI19.yaml
include/: GPR.hpp  GeoCalib.h  HECalib.h  IBACalib.hpp  IBACalib2.hpp  KDTreeVectorOfVectorsAdaptor.h  NLHECalib.hpp  argparse.hpp  backend_opt.h  color_gradient.h  cv_tools.hpp  g2o_tools.h  io_tools.h  kitti_tools.h  pointcloud.h
script/: DGP_test.py  GPSOCO.py  GP_reg.py  GP_reg_backup.py  IBA_PSO.py  IBA_loaddata.py  check_corr.py  cv_tools.py  demo_IBA.py  demo_IBA_FS.py  demo_IBA_FS2.py  demo_IBA_FS_CMP.py  demo_IBA_Gopt.py  demo_IBA_Mappoint.py  demo_IBA_optical.py  demo_ICP.py  demo_MapPoint_proj.py  demo_epipolar.py  demo_proj.py  demo_project.py  demo_scatter.py  draw_iba_func.py  draw_mads_func.py  draw_traj.py  edge.py  edge_corr_opt.py  epipolar_jacobian.py  fps_v1.py  gen_perturb.py  he_calib.py  metric.py  pg2poses.py  problem.py  requirements.txt  se3_verify.py  tools.py
src/: ba_demo.cpp  ba_demo_data.cpp  backend_opt.cpp
src/examples/: ba_calib.cpp  epipolar_calib.cpp  floam_backend.cpp  floam_kitti.cpp  he_calib.cpp  he_demo_kitti.cpp  iba_calib.cpp  iba_calib3d_gpr.cpp  iba_calib_gpr.cpp  iba_calib_gpr2.cpp  iba_calib_plane.cpp  iba_calib_plane2.cpp  iba_calib_test.cpp  iba_func.cpp  iba_global.cpp  iba_global_bias.cpp  iba_global_split.cpp  iba_global_stable.cpp  iba_local.cpp  iba_single_frame.cpp  icp_calib.cpp  orb_kitti.cpp  orb_kitti_store.cpp  orb_kitti_store_backup.cpp  orb_restore.cpp  orb_save_map.cpp  uiba_calib_3d.cpp  uiba_calib_gpr.cpp  uiba_calib_plane.cpp  uiba_local.cpp  union_kitti.cpp
src/floam/: CMakeLists.txt
src/floam/include/: floamClass.h  laserMappingClass.h  lidar.h  odomEstimationClass.h
src/floam/src/: floamClass.cpp  laserProcessingClass.cpp  lidar.cpp  lidarOptimization.cpp
src/orb_slam/: CMakeLists.txt
src/orb_slam/include/: Converter.h  Frame.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  System.h  Tracking.h
src/orb_slam/src/: Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
src/scancontext/: CMakeLists.txt  Scancontext.cpp  Scancontext.h  tic_toc.h
src/test/: test_gpr.cpp  test_igl.cpp
